v0.1.4: Alignment helper + minor fixes

--- a/css/annots.css
+++ b/css/annots.css
@@ -7,8 +7,18 @@
   font-size: 12px;
 }
 
+.page-content ins:hover:before,
+.page-content ins:hover:after {
+  position: absolute; display: block; content: " "; top: 0; z-index: 4;
+  border: 0 solid rgba(255,127,127,0.8);
+}
+.page-content ins:hover:before { left: -100vw; right: -100vw;
+  border-bottom-width: 1px; }
+.page-content ins:hover:after { left: -1px; top: -100vh; bottom: -100vh;
+  border-right-width: 1px; }
+
 .page-content ins > * {
-  position: absolute; left: 0;
+  position: absolute; z-index: 8; left: 0;
   border: 1px dashed var(--txc);
   background-color: rgba(192, 192, 64, 0.2);
 }
@@ -22,12 +32,12 @@
 .page-content ins input { font: inherit; color: var(--txc); }
 
 .page-content ins[data-type="text"] input {
-  bottom: 0; width: 3ex;
+  bottom: 0; width: 3em;
   border-top-width: 0; border-right-width: 0;
 }
 
 .page-content ins[data-type="rect"] textarea {
-  width: 2em; height: 2em; overflow: hidden; }
+  width: 3em; height: 3em; overflow: hidden; }
 .page-content ins[data-type="rect"] textarea:hover {
   resize: both; overflow-y: scroll; }
 
